--- a/module-1/string-operations/your-code/main.ipynb
+++ b/module-1/string-operations/your-code/main.ipynb
@@ -30,12 +30,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Durante un tiempo no estuvo segura de si su marido era su marido.'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "str_list = ['Durante', 'un', 'tiempo', 'no', 'estuvo', 'segura', 'de', 'si', 'su', 'marido', 'era', 'su', 'marido']\n",
     "# Your code here:\n",
+    "\n",
+    "' '.join(str_list[0:len(str_list)-1]) + \" \" + str_list[len(str_list)-1] + \".\"\n",
     "\n"
    ]
   },
@@ -48,13 +61,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Grocery list: ', 'bananas', 'bread', 'brownie mix', 'broccoli']\n"
+     ]
+    }
+   ],
    "source": [
     "food_list = ['Bananas', 'Chocolate', 'bread', 'diapers', 'Ice Cream', 'Brownie Mix', 'broccoli']\n",
     "# Your code here:\n",
-    "\n"
+    "grocery_list = [\"Grocery list: \"]\n",
+    "for i in range (len(food_list)):\n",
+    "    if food_list[i].startswith(\"b\") or food_list[i].startswith(\"B\"):\n",
+    "        grocery_list.append(food_list[i].lower())\n",
+    "print(grocery_list)\n"
    ]
   },
   {
@@ -68,9 +93,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The area of the circle with radius: 4.5 is: 63.61725123519331\n"
+     ]
+    }
+   ],
    "source": [
     "import math\n",
     "\n",
@@ -91,9 +124,13 @@
     "    \"\"\"\n",
     "    \n",
     "    # Your code here:\n",
+    "    area = (pi * (x ** 2))\n",
+    "    return str(area)\n",
     "    \n",
     "    \n",
-    "# Your output string here:"
+    "    \n",
+    "# Your output string here:\n",
+    "print(string1 + \" \" + str(radius) + \" \" + string2 + \" \" + area(radius))"
    ]
   },
   {
@@ -109,9 +146,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'some': 1, 'say': 3, 'the': 1, 'world': 1, 'will': 1, 'end': 1, 'in': 2, 'firesome': 1, 'icefrom': 1, 'what': 1, 'i’ve': 1, 'tasted': 1, 'of': 2, 'desirei': 1, 'hold': 1, 'with': 1, 'those': 1, 'who': 1, 'favor': 1, 'firebut': 1, 'if': 1, 'it': 1, 'had': 1, 'to': 1, 'perish': 1, 'twicei': 1, 'think': 1, 'i': 1, 'know': 1, 'enough': 1, 'hateto': 1, 'that': 1, 'for': 1, 'destruction': 1, 'iceis': 1, 'also': 1, 'greatand': 1, 'would': 1, 'suffice': 1}\n"
+     ]
+    }
+   ],
    "source": [
     "poem = \"\"\"Some say the world will end in fire,\n",
     "Some say in ice.\n",
@@ -124,6 +169,21 @@
     "And would suffice.\"\"\"\n",
     "\n",
     "# Your code here:\n",
+    "poem = poem.lower()\n",
+    "poem = poem.replace(\".\", \"\")\n",
+    "poem = poem.replace(\",\", \"\")\n",
+    "poem = poem.replace(\"\\n\", \"\")\n",
+    "poem_list = poem.split()\n",
+    "\n",
+    "dictionary = {}\n",
+    "for word in poem_list:\n",
+    "    if (word in dictionary):\n",
+    "        dictionary[word] +=1 \n",
+    "    else:\n",
+    "        dictionary[word] = 1\n",
+    "\n",
+    "print(dictionary)\n",
+    "\n",
     "\n"
    ]
   },
@@ -136,9 +196,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['i', 'was', 'angry', 'with', 'my', 'friend', 'told', 'wrath', 'did', 'end', 'foe', 'not', 'grow', 'waterd', 'fears', 'night', '&', 'morning', 'tears', 'sunned', 'smiles', 'soft', 'deceitful', 'wiles', 'grew', 'both', 'day', 'till', 'bore', 'apple', 'bright', 'beheld', 'shine', 'he', 'knew', 'that', 'mine', 'into', 'garden', 'stole', 'when', 'had', 'veild', 'pole', 'glad', 'see', 'outstretched', 'beneath', 'tree']\n"
+     ]
+    }
+   ],
    "source": [
     "blacklist = ['and', 'as', 'an', 'a', 'the', 'in', 'it']\n",
     "\n",
@@ -163,6 +231,20 @@
     "My foe outstretched beneath the tree.\"\"\"\n",
     "\n",
     "# Your code here:\n",
+    "poem = poem.lower()\n",
+    "poem = poem.replace(\".\", \"\")\n",
+    "poem = poem.replace(\",\", \"\")\n",
+    "poem = poem.replace(\":\", \"\")\n",
+    "poem = poem.replace(\";\",\"\")\n",
+    "poem_list = poem.split()\n",
+    "whitelist = []\n",
+    "for word in poem_list:\n",
+    "    if word not in blacklist: #(optional) and word not in whitelist:\n",
+    "        whitelist.append(word)\n",
+    "        \n",
+    "print(whitelist)\n",
+    "        \n",
+    "\n",
     "\n"
    ]
   },
@@ -177,15 +259,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['T', 'P']\n"
+     ]
+    }
+   ],
    "source": [
+    "import re\n",
     "poem = \"\"\"The apparition of these faces in the crowd;\n",
     "Petals on a wet, black bough.\"\"\"\n",
     "\n",
     "# Your code here:\n",
-    "\n"
+    "print(re.findall('[A-Z]', poem))\n"
    ]
   },
   {
@@ -197,13 +288,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['123abc', 'abc123', 'JohnSmith1', 'ABBY4']\n"
+     ]
+    }
+   ],
    "source": [
     "data = ['123abc', 'abc123', 'JohnSmith1', 'ABBY4', 'JANE']\n",
-    "\n",
-    "# Your code here:\n"
+    "clean_data = []\n",
+    "# Your code here:\n",
+    "for item in data:\n",
+    "    if re.search('[0-9]', item) != None:\n",
+    "        clean_data.append(item)\n",
+    "print(clean_data)\n"
    ]
   },
   {
@@ -219,13 +322,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['123abc', 'abc123', 'JohnSmith1']\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = ['123abc', 'abc123', 'JohnSmith1', 'ABBY4', 'JANE']\n",
+    "# Your code here:\n",
+    "clean_data = []\n",
+    "for item in data:\n",
+    "    if re.search('[0-9]', item) != None and re.search('[a-z]', item) != None:\n",
+    "        clean_data.append(item)\n",
+    "print(clean_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "data = ['123abc', 'abc123', 'JohnSmith1', 'ABBY4', 'JANE']\n",
-    "# Your code here:\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -244,7 +367,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
