--- a/module-1/error-handling/your-code/main.ipynb
+++ b/module-1/error-handling/your-code/main.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,80 +33,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0\n"
+     ]
+    }
+   ],
    "source": [
     "# Modify the code below to handle positive and negative numbers by adding an if statement and performing a transformation:\n",
     "\n",
     "def sqrt_for_all(x):\n",
-    "    \"\"\"\n",
-    "    This function will take any real number and \n",
-    "    return the square root of its magnitude.\n",
-    "    \n",
-    "    Input: Real number\n",
-    "    Output: Real number\n",
-    "    \n",
-    "    Sample Input: -4\n",
-    "    Sample Output: 2.0\n",
-    "    \"\"\"\n",
-    "    \n",
-    "    return math.sqrt(x)\n",
+    "    if x > 0 :\n",
+    "        return math.sqrt(x)\n",
+    "    else: \n",
+    "        return (math.sqrt(-x))\n",
     "\n",
-    "sqrt_for_all(-1)"
+    "print(sqrt_for_all(-1)) \n",
+    "\n",
+    "#No entiendo bien a qué se refiere con handling positive and negative numbers. Supongo que pasar de negativo a positivo para que no de un numero imaginario"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Modify the code below to handle zero as well. In the case of zero, return zero\n",
     "\n",
     "def divide(x, y):\n",
-    "    \"\"\"\n",
-    "    This function will take any two real numbers \n",
-    "    and return their quotient. \n",
-    "    If the denominator is zero, we return zero.\n",
-    "    \n",
-    "    Input: Real number\n",
-    "    Output: Real number\n",
-    "    \n",
-    "    Sample Input: 5, 1\n",
-    "    Sample Output: 5.0\n",
-    "    \"\"\"\n",
-    "    \n",
-    "    return x / y\n",
+    "    if y == 0:\n",
+    "        return 0\n",
+    "    else: \n",
+    "        return x / y\n",
     "\n",
     "divide(5, 0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[11]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Modify the function below that it will take either an number and a list or two numbers. \n",
+    "# Modify the function below so that it will take either a number and a list or two numbers. \n",
     "# If we take two numbers, add them together and return a list of length 1. \n",
     "# Otherwise, add the number to every element of the list and return the resulting list\n",
     "\n",
     "def add_elements(a, l):\n",
-    "    \"\"\"\n",
-    "    This function takes either two numbers or a list and a number \n",
-    "    and adds the number to all elements of the list.\n",
-    "    If the function only takes two numbers, it returns a list \n",
-    "    of length one that is the sum of the numbers.\n",
     "    \n",
-    "    Input: number and list or two numbers\n",
-    "    Output: list\n",
-    "    \n",
-    "    Sample Input: 5, 6\n",
-    "    Sample Output: [11]\n",
-    "    \"\"\"\n",
-    "    \n",
-    "    return [a + element for element in l]\n",
+    "    if isinstance(l, list):\n",
+    "        return [a + element for element in l]\n",
+    "    else:\n",
+    "        return [a + l]\n",
+    "        \n",
     "        \n",
     "add_elements(5, 6)"
    ]
@@ -122,29 +129,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Modify the code below:\n",
     "\n",
     "l = [1,2,3,4]\n",
     "\n",
-    "sum([element + 1 for element in l]"
+    "sum([element + 1 for element in l])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The current element in the loop is 1\n",
+      "The current element in the loop is 2\n",
+      "The current element in the loop is 3\n",
+      "The current element in the loop is 4\n"
+     ]
+    }
+   ],
    "source": [
     "# Modify the code below:\n",
     "\n",
     "l = [1,2,3,4]\n",
     "\n",
     "for element in l:\n",
-    "    print(\"The current element in the loop is\" + element)"
+    "    print(\"The current element in the loop is \" + str(element))"
    ]
   },
   {
@@ -158,11 +187,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.6094379124341003\n"
+     ]
+    }
+   ],
    "source": [
     "def log_square(x):\n",
+    "    \n",
+    "    if x == 0:\n",
+    "        raise ValueError(\"Number can't be equal to 0\")\n",
+    "    else:\n",
+    "        return math.log(x)\n",
     "    \"\"\"\n",
     "    This function takes a numeric value and returns the \n",
     "    natural log of the square of the number.\n",
@@ -173,19 +215,37 @@
     "    Output: Real number or error\n",
     "    \n",
     "    Sample Input: 5\n",
-    "    Sample Output: 3.21887\n",
+    "    Sample Output: 3.21887 \n",
     "    \"\"\"\n",
     "    \n",
-    "    # Your code here:"
+    "    # Your code here:\n",
+    "print(log_square(5))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "No capital letter in string",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-39-a7bb40eb1c8f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m     \u001b[0;31m# Your code here:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcheck_capital\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"hola\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-39-a7bb40eb1c8f>\u001b[0m in \u001b[0;36mcheck_capital\u001b[0;34m(x)\u001b[0m\n\u001b[1;32m      3\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mletter\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0misupper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m     \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m\"No capital letter in string\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m     \"\"\"\n\u001b[1;32m      7\u001b[0m     \u001b[0mThis\u001b[0m \u001b[0mfunction\u001b[0m \u001b[0mreturns\u001b[0m \u001b[0mtrue\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mthe\u001b[0m \u001b[0mstring\u001b[0m \u001b[0mcontains\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: No capital letter in string"
+     ]
+    }
+   ],
    "source": [
     "def check_capital(x):\n",
+    "    for letter in x:\n",
+    "        if letter.isupper():\n",
+    "            return True\n",
+    "    raise ValueError (\"No capital letter in string\")\n",
     "    \"\"\"\n",
     "    This function returns true if the string contains \n",
     "    at least one capital letter and throws an error otherwise.\n",
@@ -197,8 +257,16 @@
     "    Sample Output: True\n",
     "    \"\"\"\n",
     "    \n",
-    "    # Your code here:"
+    "    # Your code here:\n",
+    "print(check_capital(\"hola\"))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -217,7 +285,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
