Lab finished, sort of

--- a/module-1/numpy/your-code/main.ipynb
+++ b/module-1/numpy/your-code/main.ipynb
@@ -12,11 +12,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "import numpy as np"
    ]
   },
   {
@@ -28,11 +29,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.20.2\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "print (np.version.version)"
    ]
   },
   {
@@ -45,29 +55,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0.42977078 0.36349535 0.42612929 0.17203979 0.08037446]\n",
+      "  [0.74375595 0.01743299 0.12601423 0.53870895 0.27204088]\n",
+      "  [0.54882077 0.06673489 0.80252694 0.58178576 0.14527727]]\n",
+      "\n",
+      " [[0.60985039 0.7227169  0.74603595 0.74346134 0.50400028]\n",
+      "  [0.78668098 0.44676398 0.38099243 0.34911553 0.68054657]\n",
+      "  [0.05306605 0.56712825 0.10452636 0.82471079 0.66658846]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Method 1"
+    "# Method 1\n",
+    "a = np.random.random((2,3,5))\n",
+    "print(a)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[63 58 63 69 58]\n",
+      "  [39 43 94 16 10]\n",
+      "  [16 16 37 64 78]]\n",
+      "\n",
+      " [[79 78 71 16 47]\n",
+      "  [60 55 59 55 59]\n",
+      "  [26 63 97 65 15]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Method 2"
+    "# Method 2\n",
+    "a = np.random.randint(0,100,(2,3,5))\n",
+    "print(a)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[ 1.36333998 -1.37752149  1.79346305 -0.04257295  0.16348992]\n",
+      "  [-0.98718264 -0.89627678 -1.22137079  0.11287312  3.47896325]\n",
+      "  [-0.49413694  0.37153785  0.85528415  0.40612921  1.48623464]]\n",
+      "\n",
+      " [[ 0.5782972  -0.39504667  0.9115659  -1.1962289   0.18386888]\n",
+      "  [ 0.69195858 -0.61092323  1.25810002  1.17750596 -1.44213012]\n",
+      "  [ 0.33700067  1.2319009   1.10668863  0.87867994 -0.15391195]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Method 3"
+    "# Method 3\n",
+    "a = np.random.randn(2,3,5)\n",
+    "print(a)"
    ]
   },
   {
@@ -79,11 +137,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[ 1.36333998 -1.37752149  1.79346305 -0.04257295  0.16348992]\n",
+      "  [-0.98718264 -0.89627678 -1.22137079  0.11287312  3.47896325]\n",
+      "  [-0.49413694  0.37153785  0.85528415  0.40612921  1.48623464]]\n",
+      "\n",
+      " [[ 0.5782972  -0.39504667  0.9115659  -1.1962289   0.18386888]\n",
+      "  [ 0.69195858 -0.61092323  1.25810002  1.17750596 -1.44213012]\n",
+      "  [ 0.33700067  1.2319009   1.10668863  0.87867994 -0.15391195]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "print(a)"
    ]
   },
   {
@@ -95,11 +168,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "b = np.ones((5,2,3))"
    ]
   },
   {
@@ -111,11 +185,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "print(b)"
    ]
   },
   {
@@ -127,11 +223,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "if a.size == b.size:\n",
+    "    print (\"True\")\n"
    ]
   },
   {
@@ -143,11 +249,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your answer here"
+    "# your answer here\n",
+    "#No, cause they have different shapes and it wouldnt make any mathematical sense to sum them up."
    ]
   },
   {
@@ -159,11 +266,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "b = np.reshape(b, (2,3,5))"
    ]
   },
   {
@@ -175,11 +283,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[ 2.36333998 -0.37752149  2.79346305  0.95742705  1.16348992]\n",
+      "  [ 0.01281736  0.10372322 -0.22137079  1.11287312  4.47896325]\n",
+      "  [ 0.50586306  1.37153785  1.85528415  1.40612921  2.48623464]]\n",
+      "\n",
+      " [[ 1.5782972   0.60495333  1.9115659  -0.1962289   1.18386888]\n",
+      "  [ 1.69195858  0.38907677  2.25810002  2.17750596 -0.44213012]\n",
+      "  [ 1.33700067  2.2319009   2.10668863  1.87867994  0.84608805]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code/answer here"
+    "# your code/answer here\n",
+    "d = (np.add(a,b))\n",
+    "print(d)"
    ]
   },
   {
@@ -191,11 +315,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[ 1.36333998 -1.37752149  1.79346305 -0.04257295  0.16348992]\n",
+      "  [-0.98718264 -0.89627678 -1.22137079  0.11287312  3.47896325]\n",
+      "  [-0.49413694  0.37153785  0.85528415  0.40612921  1.48623464]]\n",
+      "\n",
+      " [[ 0.5782972  -0.39504667  0.9115659  -1.1962289   0.18386888]\n",
+      "  [ 0.69195858 -0.61092323  1.25810002  1.17750596 -1.44213012]\n",
+      "  [ 0.33700067  1.2319009   1.10668863  0.87867994 -0.15391195]]] [[[1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code/answer here"
+    "# your code/answer here\n",
+    "print(a,b)\n",
+    "#explain what"
    ]
   },
   {
@@ -207,11 +353,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[ 1.36333998 -1.37752149  1.79346305 -0.04257295  0.16348992]\n",
+      "  [-0.98718264 -0.89627678 -1.22137079  0.11287312  3.47896325]\n",
+      "  [-0.49413694  0.37153785  0.85528415  0.40612921  1.48623464]]\n",
+      "\n",
+      " [[ 0.5782972  -0.39504667  0.9115659  -1.1962289   0.18386888]\n",
+      "  [ 0.69195858 -0.61092323  1.25810002  1.17750596 -1.44213012]\n",
+      "  [ 0.33700067  1.2319009   1.10668863  0.87867994 -0.15391195]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "e = np.multiply(a,b)\n",
+    "print(e)"
    ]
   },
   {
@@ -227,7 +389,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code/answer here"
+    "# your code/answer here\n",
+    "#I just multiplied them by one"
    ]
   },
   {
@@ -239,11 +402,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.3189859794497687 4.478963249468542 -0.4421301185818891\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "d_mean = np.mean(d)\n",
+    "d_min = np.min(d)\n",
+    "d_max = np.max(d)\n",
+    "print(d_mean, d_max, d_min)"
    ]
   },
   {
@@ -255,11 +430,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "f = np.empty((2,3,5))"
    ]
   },
   {
@@ -275,11 +451,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 99,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[ 75.  25.  75.  25.  25.]\n",
+      "  [ 25.  25.  25.  25. 100.]\n",
+      "  [ 25.  75.  75.  75.  75.]]\n",
+      "\n",
+      " [[ 75.  25.  75.  25.  25.]\n",
+      "  [ 75.  25.  75.  75.  25.]\n",
+      "  [ 75.  75.  75.  75.  25.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "for i in range(2):\n",
+    "    for j in range(3):\n",
+    "        for k in range(5):\n",
+    "            if d[i,j,k] > d_min and d[i,j,k] < d_mean:\n",
+    "                f[i,j,k] = 25\n",
+    "            elif d[i,j,k] > d_mean and d[i,j,k] < d_max:\n",
+    "                f[i,j,k] = 75\n",
+    "            elif d[i,j,k] == d_mean:\n",
+    "                f[i,j,k] = 50\n",
+    "            elif d[i,j,k] == d_min:\n",
+    "                f[i,j,k] = 0\n",
+    "            elif d[i,j,k] == d_max:\n",
+    "                f[i,j,k] = 100\n",
+    "print(f)"
    ]
   },
   {
@@ -345,9 +549,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:jp_env]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-jp_env-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -359,7 +563,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
