--- a/extra-work/m1/lab-web-scraping/your-code/main.ipynb
+++ b/extra-work/m1/lab-web-scraping/your-code/main.ipynb
@@ -36,13 +36,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import re"
    ]
   },
   {
@@ -54,21 +55,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
     "# This is the url you will scrape in this exercise\n",
-    "url = 'https://github.com/trending/developers'"
+    "url = 'https://github.com/trending/developers'\n",
+    "html = requests.get(url).content\n",
+    "soup = BeautifulSoup(html, \"html.parser\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 101,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['LoveSy',\n",
+       " 'Juliette',\n",
+       " 'RangiLyu',\n",
+       " 'PySimpleGUI',\n",
+       " 'mattn',\n",
+       " 'Jaco',\n",
+       " 'Joe Block',\n",
+       " 'Bo-Yi Wu',\n",
+       " 'Avelino',\n",
+       " 'Charles Kerr',\n",
+       " 'Tom Payne',\n",
+       " 'sickcodes',\n",
+       " 'Andrew Arnott',\n",
+       " 'William Boman',\n",
+       " 'pajlada',\n",
+       " 'James N',\n",
+       " 'Hajime Hoshi',\n",
+       " 'Dhaiwat Pandya',\n",
+       " 'Shivam Mathur',\n",
+       " 'Franck Nijhof',\n",
+       " 'Tõnis Tiigi',\n",
+       " 'Balázs Orbán',\n",
+       " 'Claudio Jolowicz',\n",
+       " 'CrazyMax',\n",
+       " 'Bill']"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "\n",
+    "x = soup.find_all('h1', class_ = \"h3 lh-condensed\")\n",
+    "lst = []\n",
+    "lst2 = []\n",
+    "for i in range(0,len(x)):\n",
+    "    aux = x[i]   \n",
+    "    aux = str(aux).split(' ')\n",
+    "    lst.append(aux[len(aux)-3].replace(\"\\n</a>\", \"\"))\n",
+    "    lst.append(aux[len(aux)-2].replace(\"\\n</a>\", \"\"))\n",
+    "    \n",
+    "for j in range(0,len(lst),2):\n",
+    "    if lst[j] == \"\":\n",
+    "        lst2.append(lst[j+1])\n",
+    "    else:\n",
+    "        lst2.append(lst[j] + \" \" + lst[j+1])\n",
+    "        \n",
+    "#I'd love to explain how this code works but I don't even know whats going on myself so..., but it does work!\n",
+    "\n",
+    "    \n",
+    "    \n",
+    "lst2"
    ]
   },
   {
@@ -140,21 +199,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
     "# This is the url you will scrape in this exercise\n",
-    "url = 'https://github.com/trending/python?since=daily'"
+    "url = 'https://github.com/trending/python?since=daily'\n",
+    "html = requests.get(url).content\n",
+    "soup = BeautifulSoup(html, \"html.parser\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 109,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['bombcrypto-bot',\n",
+       " 'system-design-primer',\n",
+       " 'light-show',\n",
+       " 'python-cheatsheet',\n",
+       " 'devops-exercises',\n",
+       " 'dirsearch',\n",
+       " 'sherlock',\n",
+       " 'YouTube-Spammer-Purge',\n",
+       " 'jesse',\n",
+       " 'Python',\n",
+       " 'MusicPlayer',\n",
+       " 'SLIP',\n",
+       " 'ddia',\n",
+       " 'catuserbot',\n",
+       " 'svox2',\n",
+       " 'pyodide',\n",
+       " 'openpilot',\n",
+       " 'nanodet',\n",
+       " 'yt-dlp',\n",
+       " 'terminal-christmas-tree',\n",
+       " 'mirror-leech-telegram-bot',\n",
+       " 'log4jminecraft',\n",
+       " 'WV-AMZN-4K-RIPPER',\n",
+       " 'core',\n",
+       " 'mypy']"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "\n",
+    "lst = []\n",
+    "lst2 = []\n",
+    "for i in range(0,len(x)):\n",
+    "    aux = x[i]   \n",
+    "    aux = str(aux).split(' ')\n",
+    "    lst.append(aux[len(aux)-3].replace(\"\\n</a>\", \"\"))\n",
+    "    lst.append(aux[len(aux)-2].replace(\"\\n</a>\", \"\"))\n",
+    "    \n",
+    "for j in range(0,len(lst),2):\n",
+    "    if lst[j] == \"\":\n",
+    "        lst2.append(lst[j+1])\n",
+    "    else:\n",
+    "        lst2.append(lst[j] + \" \" + lst[j+1])\n",
+    "        \n",
+    "#Literally just copy-pasted last cell's code. Seems like this works pretty decently for this kind of thing! yay!\n",
+    "        \n",
+    "lst2\n"
    ]
   },
   {
@@ -560,7 +674,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -574,7 +688,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
